# Petra-M

./: .gitignore  COPYRIGHT  ChangeLog  INSTALL.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  testrelease.yml
Docker/: Dockerfile.petram-base
doc/: manual.aux  manual.tex
examples/: README  mumps_example1.py  mumps_example2.py  mumps_example3.py  mumps_example3_child.py
petram/: debug.py  engine.py  engine_v3.py  init_model.py  mfem_config.py  mfem_model.py  mfem_viewer.py  model.py  namespace_mixin.py  utils.py
petram/data/: BilinearOps  LinearOps
petram/helper/: block_matrix.py  boundary_refinement.py  convolv1d.py  convolve.py  convolve1d.py  curvelinear_coords.py  curvilinear_coords.py  cylindrical_coords.py  densemat2pymat.py  direct_wrapper_call.py  dof_map.py  dof_mapping_matrix.py  driver_path.py  dummy_mpi.py  eval_deriv.py  export_nodalvalues.py  expression.py  find_dof_map2.py  find_dof_map_h1.py  find_dof_map_h1_2.py  find_dof_map_nd.py  formholder.py  geom.py  global_named_list.py  hcurl_normal.py  hierarchical_finite_element_space.py  hierarchical_finite_element_spaces.py  init_helper.py  interpolate.py  matrix_file.py  memory_report.py  mpi_recipes.py  numba_interp.py  numba_ive.py  numba_utils.py  operators.py  phys_module_util.py  preconditioners.py  projection.py  pybilininteg.py  (+4 more)
petram/mesh/: __init__.py  composite.py  find_edges.py  find_loop.py  find_loop_par.py  find_vertex.py  geo_plot.py  make_mesh1d.py  make_simplemesh.py  mesh_extension.py  mesh_inspect.py  mesh_model.py  mesh_sel_buttons.py  mesh_utils.py  nastran2mfem.py  partial_mesh.py  plot_mesh.py  pumimesh_model.py  read_mfemmesh.py  read_mfemmesh2.py  read_mfemmesh3.py  refined_mfem_geom.py
petram/phys/: #aux_operator.py#  aux_operator.py  aux_variable.py  coefficient.py  numba_coefficient.py  phys_const.py  phys_model.py  projection.py  pycomplex_coefficient.py  vtable.py  weakform.py
petram/pi/: dlg_array_run.py  dlg_edit_model.py  dlg_plot_expr.py  dlg_plot_sol.py  dlg_submit_job.py  pfz2script.py  run_petram.py  sel_buttons.py  selection_palette.py  shell_commands.py  simple_frame_plus.py  widget_forms.py  widget_init.py  widget_nl.py  widget_parameters.py  widget_smoother.py  widgets.py
petram/postprocess/: discrt_v_integration.py  discrt_v_interpolator.py  global_integration.py  pp_model.py  project_solution.py
petram/remote/: client_script.py  remote_params.py
petram/sol/: #bdr_nodal_evaluator.py#  bdr_nodal_evaluator.py  edge_nodal_evaluator.py  evaluator_agent.py  evaluator_cs.py  evaluator_mp.py  evaluator_single.py  evaluators.py  integral_evaluator.py  listsoldir.py  ncedge_evaluator.py  ncface_evaluator.py  nodal_refinement.py  point_evaluator.py  pointcloud_evaluator.py  probe.py  probe_evaluator.py  slice_evaluator.py  solsets.py  test.py
petram/solver/: #timedomain_solver_model.py#  __init__.py  ams_model.py  block_smoother.py  distance_solver.py  egn_solver_model.py  eigen.py  gmres_model.py  iterative_model.py  krylov.py  linearsystem_reducer.py  mg_solver_model.py  ml_solver_model.py  mumps_model.py  nl_solver_model.py  parametric.py  parametric_scanner.py  set_var.py  solver_controls.py  solver_model.py  (+7 more)
test/: test_mpi_recipes.py
(+141 files in other folders)
