[project]
name = "PetraM_Base"
license = "GPL-3.0-only"
description='PetraM base package'
authors = [ { name = "S. Shiraiwa" } ]
maintainers = [ { name = "S. Shiraiwa", email = "shiraiwa@princeton.edu" } ]
keywords = ["scientific computing", "python visualzation", "finite element method", "MFEM"]
readme = "README.md"
requires-python = ">=3.10"
version = "2.5.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mfem >= 4.7"
]

[project.urls]
"Homepage" = "https://github.com/PetraM_Base"
"Download" = "https://github.com/PetraM_Base"

[build-system]
requires = [
        "setuptools>=80.0.1",
        "pip>=25.1.0", 
]

[tool.setuptools]
package-dir = {"" = "python"}
#[tool.setuptools.packages.find]
#include = ["petram"]

[tool.setuptools.package-data]
"petram" =  ['data/icon/*.png', 'data/*Ops']
